# AutomobileFraudDetection

./: README.md  pyproject.toml
src/automobilefrauddetection/models/: ae.py  hgad.py  hgfd.py  majority_classifier.py  nn.py
